tests/typing/fail/pre-02.stderr
error: this expression will cause an access to an undefined value
 --> tests/typing/fail/pre-02.rs:8:19
  |
8 |         a : int = pre 0 -> 1;
  |                   ^^^^^
